raincrow portugal, tags cleanup

--- a/src/pages/tags/[...tag].astro
+++ b/src/pages/tags/[...tag].astro
@@ -10,17 +10,27 @@ export async function getStaticPaths() {
 
     const uniqueTags = Array.from(
         new Set([
-            ...blogPosts.map((blog) => blog.data.tags).flat(),
-            ...projects.map((project) => project.data.tags).flat(),
+            ...blogPosts
+                .map((blog) => blog.data.tags)
+                .flat()
+                .map((t) => t.toLowerCase()),
+            ...projects
+                .map((project) => project.data.tags)
+                .flat()
+                .map((t) => t.toLowerCase()),
         ])
     );
 
     return uniqueTags.map((tag) => {
         const filteredBlog = blogPosts
-            .filter((post) => post.data.tags?.includes(tag))
+            .filter((post) =>
+                post.data.tags?.map((t) => t.toLowerCase()).includes(tag)
+            )
             .sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
         const filteredProjects = projects
-            .filter((project) => project.data.tags?.includes(tag))
+            .filter((project) =>
+                project.data.tags?.map((t) => t.toLowerCase()).includes(tag)
+            )
             .sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 
         return {
