--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const year = new Date().getFullYear();
 <footer>
     <div class="mx-auto flex gap-4 justify-center items-centermin-h-16">
         <div class="flex gap-4 flex-wrap">
-            <a href="/rss">/rss</a>
+            <a href="/feed/feed.xml">/rss</a>
             <a href="/about">/about</a>
             <a href="/projects">/projects</a>
             <a href="/blog">/blog</a>
