--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -3,10 +3,12 @@ import 'src/styles/global.css';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import { metadata } from 'src/metadata.ts';
-const { title: propsTitle, description: propsDescription } = Astro.props;
+const { title: propsTitle, description: propsDescription, slug } = Astro.props;
 
 const url = Astro.site?.origin + Astro.url.pathname;
-const socialImage = Astro.site?.origin + metadata.socialImage;
+const socialImage = slug
+    ? new URL(`/social-cards/${slug}.png`, Astro.url)
+    : Astro.site?.origin + metadata.socialImage;
 const title = propsTitle ? propsTitle + ' • Parker Davis' : 'Parker Davis';
 const description = propsDescription ? propsDescription : metadata.description;
 ---
