--- a/src/components/ProjectListing.astro
+++ b/src/components/ProjectListing.astro
@@ -26,7 +26,7 @@ const { project, showTag } = Astro.props;
 <style>
     .tags-list {
         display: flex;
-        gap: 0.5rem;
+        column-gap: 0.5rem;
         flex-wrap: wrap;
         font-style: italic;
         font-size: var(--step--1);
