--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,11 @@ const nav = [
 ---
 
 <header>
-    <a href="/" class="home-link text-2xl font-bold mr-8 no-underline"
-        >{metadata.title}</a
-    >
+    <h1>
+        <a href="/" class="home-link font-bold mr-8 no-underline"
+            >{metadata.title}</a
+        >
+    </h1>
 
     <div class="icon" style="max-width: 6rem">
         <Icon icon="btsp" />
@@ -20,10 +22,10 @@ const nav = [
 
     <nav>
         <h2 class="visually-hidden">Top level navigation menu</h2>
-        <ul class="flex flex-wrap items-end gap-4">
+        <ul class="flex flex-wrap items-end gap-2">
             {
                 nav.map((link) => (
-                    <li class="nav-item inline-block pr-4">
+                    <li class="nav-item inline-block pr-2">
                         <a href={link.url} class="no-underline">
                             {link.text}
                         </a>
@@ -39,6 +41,7 @@ const nav = [
         --icon-width: clamp(3rem, 20vw, 5rem);
         --icon-height: 80px;
     }
+
     header {
         display: grid;
         grid-template-rows: auto auto;
@@ -49,6 +52,11 @@ const nav = [
         column-gap: 1rem;
         align-items: end;
         margin-block: 4rem;
+        margin-top: 3rem;
+    }
+
+    h1 {
+        font-size: var(--step-3);
     }
 
     header a {
