--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -50,6 +50,13 @@ const description = propsDescription ? propsDescription : metadata.description;
             src="https://plausible.parkerdavis.dev/js/script.js"
             onload="this.setAttribute('data-domain',window.location.host)"
             is:inline></script>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <Header />
