--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,7 @@
         Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
         Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New,
         Courier, monospace;
+    --font-family-serif: 'Crimson Pro', Times, serif;
 
     /* Minor Third */
     --step--3: 0.579rem;
@@ -29,6 +30,7 @@
     --step-5: 2.488rem;
 
     --body-width: 40rem;
+    --body-width: 60ch;
 
     --text-color: hsl(var(--text-color-values));
     --text-color-faded: hsl(var(--text-color-values) / 0.5);
@@ -36,7 +38,7 @@
     --text-color-link: hsl(var(--text-color-link-values));
     --background-color: hsl(var(--background-color-values));
 
-    --text-color-values: 0 0% 20%;
+    --text-color-values: 0 0% 25%;
     --text-color-link-values: 10.63, 45.28%, 41.57%;
     --background-color-values: 0, 0%, 96.08%;
 
@@ -47,16 +49,20 @@
     }
 }
 
-html,
-body {
+html {
     font-size: 16px;
+}
+body {
+    font-size: 20px;
     padding: 0;
     margin: 0 auto;
-    font-family: var(--font-family);
+    font-family: var(--font-family-serif);
+    font-weight: 400;
     color: var(--text-color);
     background-color: var(--background-color);
-    line-height: 1.6;
+    line-height: 1.25;
 }
+
 html {
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -99,9 +105,10 @@ section {
 h1,
 h2,
 h3 {
-    line-height: 1.1;
+    line-height: 0.9;
     text-wrap: pretty;
     text-wrap: balance;
+    letter-spacing: -1px;
 }
 h1 {
     font-size: var(--step-4);
@@ -153,6 +160,7 @@ cite {
 
 code {
     background: #00000011;
+    font-size: var(--step-0);
 }
 
 article a {
