--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,18 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+
+@font-face {
+    font-display: swap;
+    font-family: "Crimson Pro";
+    font-style: normal;
+    src: url("/fonts/CrimsonPro.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Crimson Pro";
+    font-style: italic;
+    src: url("/fonts/CrimsonPro-italic.woff2") format("woff2");
+}
 
 @view-transition {
     navigation: auto;
@@ -12,11 +26,11 @@
     color-scheme: light dark;
 
     --font-family: -apple-system, system-ui, sans-serif;
-    --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT,
-        Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
-        Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New,
-        Courier, monospace;
-    --font-family-serif: 'Crimson Pro', Times, serif;
+    --font-family-monospace:
+        Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console,
+        Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono,
+        Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
+    --font-family-serif: "Crimson Pro", Times, serif;
 
     /* Minor Third */
     --step--3: 0.579rem;
@@ -30,7 +44,7 @@
     --step-5: 2.488rem;
 
     --body-width: 40rem;
-    --body-width: 60ch;
+    --body-width: 55ch;
 
     --text-color: hsl(var(--text-color-values));
     --text-color-faded: hsl(var(--text-color-values) / 0.5);
@@ -44,6 +58,7 @@
 
     @media (prefers-color-scheme: dark) {
         --text-color-values: 0 2.63% 85.1%;
+        --text-color-values: 0 2.63% 80%;
         --text-color-link-values: 209.49, 55.14%, 79.02%;
         --background-color-values: 210, 34.38%, 12.55%;
     }
@@ -160,7 +175,7 @@ cite {
 
 code {
     background: #00000011;
-    font-size: var(--step-0);
+    font-size: var(--step--1);
 }
 
 article a {
@@ -190,7 +205,7 @@ article li {
     list-style: disc;
 }
 article li li {
-    list-style-type: '- ';
+    list-style-type: "- ";
 }
 
 .small-image {
