--- a/src/components/DisplayTags.astro
+++ b/src/components/DisplayTags.astro
@@ -22,7 +22,7 @@ const { tags } = Astro.props;
 </div>
 <style>
     span {
-        font-size: var(--step--1);
+        font-size: var(--step-0);
         font-style: italic;
     }
 </style>
