--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
 ---
-import { metadata } from 'src/metadata.ts';
-import Icon from './Icon.astro';
+import { metadata } from "src/metadata.ts";
+import Icon from "./Icon.astro";
 
 const nav = [
-    { text: 'About', url: '/about' },
-    { text: 'Projects', url: '/projects' },
-    { text: 'Blog', url: '/blog' },
+    { text: "About", url: "/about" },
+    { text: "Projects", url: "/projects" },
+    { text: "Blog", url: "/blog" },
 ];
 ---
 
@@ -47,22 +47,17 @@ const nav = [
         grid-template-rows: auto auto;
         grid-template-columns: var(--icon-width) 1fr;
         grid-template-areas:
-            'icon title'
-            'icon nav';
+            "icon title"
+            "icon nav";
         column-gap: 1rem;
         align-items: end;
         margin-block: 4rem;
         margin-top: 3rem;
-    }
-
-    h1 {
-        font-size: var(--step-3);
-    }
-
-    header a {
-        text-decoration: none;
-        & :hover {
-            text-decoration: underline;
+        a {
+            text-decoration: none;
+            & :hover {
+                text-decoration: underline;
+            }
         }
     }
 
@@ -74,6 +69,9 @@ const nav = [
 
     .home-link {
         grid-area: title;
+        font-size: var(--step-3);
+        letter-spacing: 0px;
+        /*font-weight: 400;*/
     }
 
     nav {
