--- a/src/components/ProjectListing.astro
+++ b/src/components/ProjectListing.astro
@@ -29,6 +29,6 @@ const { project, showTag } = Astro.props;
         column-gap: 0.5rem;
         flex-wrap: wrap;
         font-style: italic;
-        font-size: var(--step--1);
+        font-size: var(--step-0);
     }
 </style>
