--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,15 +1,15 @@
 ---
-import 'src/styles/global.css';
-import Header from '@components/Header.astro';
-import Footer from '@components/Footer.astro';
-import { metadata } from 'src/metadata.ts';
+import "src/styles/global.css";
+import Header from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
+import { metadata } from "src/metadata.ts";
 const { title: propsTitle, description: propsDescription, slug } = Astro.props;
 
 const url = Astro.site?.origin + Astro.url.pathname;
 const socialImage = slug
     ? new URL(`/social-cards/${slug}.png`, Astro.url)
     : Astro.site?.origin + metadata.socialImage;
-const title = propsTitle ? propsTitle + ' • Parker Davis' : 'Parker Davis';
+const title = propsTitle ? propsTitle + " • Parker Davis" : "Parker Davis";
 const description = propsDescription ? propsDescription : metadata.description;
 ---
 
@@ -19,6 +19,15 @@ const description = propsDescription ? propsDescription : metadata.description;
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="generator" content={Astro.generator} />
+
+        <link
+            rel="preload"
+            href="/fonts/CrimsonPro.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+
         <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
         <link rel="sitemap" href="/sitemap-index.xml" />
         <link
@@ -50,13 +59,6 @@ const description = propsDescription ? propsDescription : metadata.description;
             src="https://plausible.parkerdavis.dev/js/script.js"
             onload="this.setAttribute('data-domain',window.location.host)"
             is:inline></script>
-
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
-            rel="stylesheet"
-        />
     </head>
     <body>
         <Header />
@@ -65,26 +67,26 @@ const description = propsDescription ? propsDescription : metadata.description;
         <script>
             const allPictures =
                 document.querySelectorAll<HTMLImageElement>(
-                    'img:not(.no-fade)'
+                    "img:not(.no-fade)",
                 );
 
             allPictures.forEach((image) => {
-                image.style.opacity = '0';
+                image.style.opacity = "0";
             });
 
             allPictures.forEach((image) =>
-                image.addEventListener('load', (event) => {
+                image.addEventListener("load", (event) => {
                     const image = event.target as HTMLImageElement;
-                    image.style.transition = 'opacity 1s';
-                    image.style.opacity = '1';
-                })
+                    image.style.transition = "opacity 1s";
+                    image.style.opacity = "1";
+                }),
             );
 
             // Backup if image is loaded from the cache;
             allPictures.forEach((image) => {
                 if (image.complete) {
-                    image.style.transition = 'opacity 1s';
-                    image.style.opacity = '1';
+                    image.style.transition = "opacity 1s";
+                    image.style.opacity = "1";
                 }
             });
         </script>
