--- a/src/pages/tags/[...tag].astro
+++ b/src/pages/tags/[...tag].astro
@@ -1,12 +1,12 @@
 ---
-import { getCollection } from 'astro:content';
-import MainFlow from '@layouts/MainFlow.astro';
-import PostListing from '@components/PostListing.astro';
-import ProjectListing from '@components/ProjectListing.astro';
+import { getCollection } from "astro:content";
+import MainFlow from "@layouts/MainFlow.astro";
+import PostListing from "@components/PostListing.astro";
+import ProjectListing from "@components/ProjectListing.astro";
 
 export async function getStaticPaths() {
-    const blogPosts = await getCollection('blog');
-    const projects = await getCollection('projects');
+    const blogPosts = await getCollection("blog");
+    const projects = await getCollection("projects");
 
     const uniqueTags = Array.from(
         new Set([
@@ -18,18 +18,18 @@ export async function getStaticPaths() {
                 .map((project) => project.data.tags)
                 .flat()
                 .map((t) => t?.toLowerCase()),
-        ])
+        ]),
     );
 
     return uniqueTags.map((tag) => {
         const filteredBlog = blogPosts
             .filter((post) =>
-                post.data.tags?.map((t) => t?.toLowerCase()).includes(tag)
+                post.data.tags?.map((t) => t?.toLowerCase()).includes(tag),
             )
             .sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
         const filteredProjects = projects
             .filter((project) =>
-                project.data.tags?.map((t) => t?.toLowerCase()).includes(tag)
+                project.data.tags?.map((t) => t?.toLowerCase()).includes(tag),
             )
             .sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 
@@ -67,7 +67,7 @@ const { filteredBlog, filteredProjects } = Astro.props;
         filteredProjects.length > 0 && (
             <>
                 <h2>Projects</h2>
-                <ul class="flex flex-col gap-4">
+                <ul class="flex flex-col gap-6">
                     {filteredProjects.map((project) => (
                         <ProjectListing project={project} />
                     ))}
