Rearrange projects page

--- a/src/components/ProjectListing.astro
+++ b/src/components/ProjectListing.astro
@@ -30,5 +30,6 @@ const { project, showTag } = Astro.props;
         flex-wrap: wrap;
         font-style: italic;
         font-size: var(--step-0);
+        opacity: 50%;
     }
 </style>
