--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,7 +76,8 @@ body {
     font-weight: 300;
     color: var(--text-color);
     background-color: var(--background-color);
-    line-height: 1.25;
+    /*line-height: 1.25;*/
+    line-height: 1.4;
 }
 
 html {
