--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ const nav = [
             {
                 nav.map((link) => (
                     <li class="nav-item inline-block pr-2">
-                        <a href={link.url} class="no-underline">
+                        <a href={link.url}>
                             {link.text}
                         </a>
                     </li>
@@ -55,7 +55,7 @@ const nav = [
         margin-top: 3rem;
         a {
             text-decoration: none;
-            & :hover {
+            &:hover {
                 text-decoration: underline;
             }
         }
