--- a/src/components/home/Greetings.astro
+++ b/src/components/home/Greetings.astro
@@ -30,6 +30,9 @@ import { metadata } from 'src/metadata.ts';
     .social-container svg {
         height: 24px;
         width: 24px;
+        &:hover {
+            color: var(--text-color-link);
+        }
     }
 </style>
 <style>
