Text and link color changes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -90,4 +90,8 @@ const nav = [
     .nav-item:last-of-type {
         border: none;
     }
+
+     a {
+         color: var(--text-color);
+     }
 </style>
