--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -54,9 +54,9 @@ const tagsWithCount = countAndSortTags(allTags);
 </MainFlow>
 
 <style>
-    .tag-name {
+    /*.tag-name {
         color: var(--text-color);
-    }
+    }*/
     .tag-num {
         text-size: var(--step--1);
         color: var(--text-color-faded);
