--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,6 +58,15 @@
     --background-color-values: 0, 0%, 96.08%;
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        color-scheme: dark;
+        --text-color-values: 0 2.63% 80%;
+        --text-color-link-values: 209.49, 55.14%, 79.02%;
+        --background-color-values: 210, 34.38%, 12.55%;
+    }
+}
+
 /* Dark theme - explicit data attribute */
 [data-theme='dark'] {
     color-scheme: dark;
@@ -194,6 +203,27 @@ code {
     font-size: var(--step--1);
 }
 
+/* Dark mode code styling */
+@media (prefers-color-scheme: dark) {
+    :root code {
+        background: #ffffff22;
+    }
+
+    :root .button {
+        background: white;
+        color: black;
+    }
+}
+
+[data-theme='dark'] code {
+    background: #ffffff22;
+}
+
+[data-theme='dark'] .button {
+    background: white;
+    color: black;
+}
+
 article a,
 a {
     color: var(--text-color-link);
@@ -228,15 +258,6 @@ article li li {
 .small-image {
     width: 50%;
     margin-inline: auto;
-}
-
-[data-theme='dark'] code {
-    background: #ffffff22;
-}
-
-[data-theme='dark'] .button {
-    background: white;
-    color: black;
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
