WIP: Theme switcher disappears with no javascript

--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -1,17 +1,21 @@
-<button popovertarget="theme-popover" id="theme-button">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun-moon-icon lucide-sun-moon"><path d="M12 2v2"/><path d="M14.837 16.385a6 6 0 1 1-7.223-7.222c.624-.147.97.66.715 1.248a4 4 0 0 0 5.26 5.259c.589-.255 1.396.09 1.248.715"/><path d="M16 12a4 4 0 0 0-4-4"/><path d="m19 5-1.256 1.256"/><path d="M20 12h2"/></svg>
-</button>
+<div class="theme-switcher-container">
+    <button popovertarget="theme-popover" id="theme-button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun-moon-icon lucide-sun-moon"><path d="M12 2v2"/><path d="M14.837 16.385a6 6 0 1 1-7.223-7.222c.624-.147.97.66.715 1.248a4 4 0 0 0 5.26 5.259c.589-.255 1.396.09 1.248.715"/><path d="M16 12a4 4 0 0 0-4-4"/><path d="m19 5-1.256 1.256"/><path d="M20 12h2"/></svg>
+    </button>
 
-<div popover id='theme-popover'>
-    <div class="flex flex-col items-end p-4">
+    <div popover id='theme-popover'>
+        <div class="flex flex-col items-end p-4">
 
-    <button id="theme-light" popovertarget="theme-popover" popovertargetaction="hide">Light</button>
-    <button id="theme-dark" popovertarget="theme-popover" popovertargetaction="hide">Dark</button>
-    <button id="theme-auto" popovertarget="theme-popover" popovertargetaction="hide">Auto</button>
+        <button id="theme-light" popovertarget="theme-popover" popovertargetaction="hide">Light</button>
+        <button id="theme-dark" popovertarget="theme-popover" popovertargetaction="hide">Dark</button>
+        <button id="theme-auto" popovertarget="theme-popover" popovertargetaction="hide">Auto</button>
+        </div>
     </div>
 </div>
 
 <script is:inline>
+    document.querySelector('.theme-switcher-container').style.display = 'block';
+
     const lightButton = document.querySelector('#theme-light');
     const darkButton = document.querySelector('#theme-dark');
     const autoButton = document.querySelector('#theme-auto');
@@ -34,6 +38,10 @@
 </script>
 
 <style>
+    .theme-switcher-container {
+        display: none;
+    }
+
     button {
         cursor: pointer;
     }
@@ -60,6 +68,4 @@
     }
 </style>
 
-<!-- TODO: auto does not respect system preferences dynamically -->
 <!-- TODO: make theme button not visible if javascript is not available -->
-<!-- TODO: code blocks are not respecting dark mode styles -->
