--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,7 +56,7 @@ const nav = [
             "icon title theme"
             "icon nav theme";
         column-gap: 1rem;
-        align-items: end;
+        align-items: center;
         margin-block: 4rem;
         margin-top: 3rem;
         a {
