pre-load font troubleshooting
headers might help safari preload font

--- a/src/components/home/Greetings.astro
+++ b/src/components/home/Greetings.astro
@@ -28,6 +28,7 @@ import { metadata } from 'src/metadata.ts';
 
 <style is:global>
     .social-container svg {
+        color: var(--text-color);
         height: 24px;
         width: 24px;
         &:hover {
