--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
     font-display: swap;
     font-family: 'Crimson Pro';
     font-style: normal;
+    font-weight: 200 900;
     src: url('/fonts/CrimsonPro.woff2') format('woff2');
 }
 
@@ -11,6 +12,7 @@
     font-display: swap;
     font-family: 'Crimson Pro';
     font-style: italic;
+    font-weight: 200 900;
     src: url('/fonts/CrimsonPro-italic.woff2') format('woff2');
 }
 
@@ -67,7 +69,6 @@
     }
 }
 
-/* Dark theme - explicit data attribute */
 [data-theme='dark'] {
     color-scheme: dark;
     --text-color-values: 0 2.63% 80%;
@@ -75,7 +76,6 @@
     --background-color-values: 210, 34.38%, 12.55%;
 }
 
-/* Light theme - explicit data attribute (for completeness) */
 [data-theme='light'] {
     color-scheme: light;
     --text-color-values: 0 0% 25%;
