Style link tweaks

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,7 +60,9 @@ const nav = [
         a {
             text-decoration: none;
             &:hover {
-                text-decoration: underline;
+                text-decoration-color: var(--text-color-link);
+                text-decoration-thickness: 2px;
+                text-decoration-line: underline;
             }
         }
     }
