--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -168,7 +168,9 @@ h6 {
 }
 
 a {
-    text-decoration: underline;
+    text-decoration-color: var(--text-color-link);
+    text-decoration-thickness: 1px;
+    text-decoration-line: underline;
 }
 
 a.no-underline {
@@ -176,16 +178,11 @@ a.no-underline {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration-thickness: 2px;
 }
 
 img {
     font-style: italic;
-    /* background: linear-gradient(
-        135deg,
-        var(--background-color),
-        var(--text-color-link)
-    ); */
     border: 1px var(--text-color-faded) solid;
 }
 
@@ -201,11 +198,6 @@ cite {
 code {
     background: #00000011;
     font-size: var(--step--1);
-}
-
-article a,
-a {
-    color: var(--text-color-link);
 }
 
 article img {
